refactor: Migrate to Java 17
Use this link to re-run the recipe: https://public.moderne.io/recipes/org.openrewrite.java.migrate.UpgradeToJava17

Co-authored-by: Moderne <team@moderne.io>